test_vectors/nfl_packet_verify_v1/negative/bad_sha256sum_line_0537effea5f535d061b313f72e37ca52d4a34fff00865066c51fa7dff410618a/payload/repo_snapshot/repo_root/scripts/_gi_receipt_smoke_test_v1.ps1
param(
  [Parameter(Mandatory=$true)][string]$ReceiptId,
  [Parameter(Mandatory=$true)][string]$BearerToken,
  [Parameter(Mandatory=$false)][string]$ProjectRef = "hmlihkcijjamxdurydbv"
)
$ErrorActionPreference="Stop"
Set-StrictMode -Version Latest

$base = "https://{0}.functions.supabase.co" -f $ProjectRef
$hAuth = "Authorization: Bearer " + $BearerToken

Write-Host "== GI receipt get ==" -ForegroundColor Cyan
$bodyGet = @{ receipt_id = $ReceiptId } | ConvertTo-Json -Depth 50
curl.exe -s -X POST ($base + "/gi-receipt-get") -H "Content-Type: application/json" -H $hAuth -d $bodyGet | Out-Host

Write-Host "== GI receipt verify (proposal echo) ==" -ForegroundColor Cyan
# Replace proposal payload with your real proposal when ready
$proposal = @{ sample = "proposal"; receipt_id = $ReceiptId }
$bodyVer = @{ receipt_id = $ReceiptId; proposal = $proposal } | ConvertTo-Json -Depth 50
curl.exe -s -X POST ($base + "/gi-receipt-verify") -H "Content-Type: application/json" -H $hAuth -d $bodyVer | Out-Host
